<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FactMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="register">Rejestracja</string>
    <string name="Register">Zarejestruj się</string>
    <string name="Login">Zaloguj się</string>
    <string name="Email">Nazwa użytkownika</string>
    <string name="Password">Hasło</string>
    <string name="register_new_user">Nie masz jeszcze konta? Zarejestruj się!</string>
    <string name="login_new_user">Masz już konto? Zaloguj się!</string>
    <string name="MainMenu">Menu główne</string>
    <string name="admin_panel">Panel administratora</string>
    <string name="choose_user">Wybierz użytkownika</string>
    <string name="delate_acc">Usuń konto</string>
    <string name="set_privilleges">Nadaj uprawnienia</string>
    <string name="exit">Wyjście</string>
    <string name="repeat_pass">Powtórz hasło</string>
    <string name="chart_input_1">Wyrysuj !</string>
    <string name="admin">admin</string>
    <string name="chart1">Wykres </string>
    <string name="choose_input">Wybierz wejście</string>
    <string name="choose_start_time">Wybierz czas początkowy</string>
    <string name="choose_time_range">Wybierz zakres czasu (0-15min)</string>
    <string name="choose_date">Wybierz datę</string>
    <string name="check">Sprawdź !</string>
    <string name="charts">Wykresy</string>
    <string name="current_state">Stan aktualny</string>
    <string name="stats">Statystyki</string>
    <string name="online_time">Czas pracy urządzenia</string>
    <string name="text_on">ON</string>
    <string name="text_off">OFF</string>

</resources>