<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Large Text"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewSetPrivilleges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewUserName"
        android:text="@string/set_privilleges"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ToggleButton
        android:id="@+id/toggleButtonSetPrivilleges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewSetPrivilleges"
        android:layout_alignBottom="@+id/textViewSetPrivilleges"
        android:layout_toRightOf="@+id/textViewSetPrivilleges"
        android:text="ToggleButton"
         />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDelateAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/buttonDelateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButtonSetPrivilleges"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/delate_acc" />

</RelativeLayout>
